minikube/ingress-hosts.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
  namespace: dev
spec:
  selector:
    app: keycloak
  ports:
  - port: 5555
    targetPort: 8080
  type: NodePort
