minikube/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
  - port: 10000
    targetPort: 8080
    NodePort: 30400
