minikube/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: dev
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
